<resources>
    <string name="app_name">Sciroper</string>
    <string name="choose_first">%1$s Choose first</string>
    <string name="player_choose">%1$s Chooses %2$s</string>
    <string name="havent_choose">%1$s haven\'t chosen anything</string>
    <string name="player_vs_com">%1$s Vs COM</string>
    <string name="player_vs_player">%1$s Vs Player</string>
    <string name="choose_your_opponent">Choose Your Opponent</string>
    <string name="player_with_computer">Play with Computer</string>
    <string name="player_with_other_player">Play with other player</string>
    <string name="next">next</string>
    <string name="avatar_game">avatar_game</string>
    <string name="game_suit">Game Suit</string>
    <string name="_1">1</string>
    <string name="user_level">%1$d</string>
    <string name="register_succeed">Register\nSucceed</string>
    <string name="binar">Binar</string>
    <string name="bos">Bos</string>
    <string name="salsa">salsa</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="com">COM</string>
    <string name="vs">VS</string>
    <string name="choose_one_between_rock_sciccors_paper_and_the_opponent_will_choose_between_rock_sciccors_paper_too">Watch this video to guide you, how to play this game. Or simply is Choose one between rock / sciccors / paper, and the opponent will choose between rock / sciccors / paper too.</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="menu">Menu</string>
    <string name="how_to_play">How To Play</string>
    <string name="play_game">Play Game</string>
    <string name="leader_board">Leaderboard</string>
    <string name="exit">Exit</string>
    <string name="player_2">Player 2</string>
    <string name="show">Show</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="new_password">New password</string>
    <string name="re_new_password">Re-new password</string>
    <string name="update">Update</string>
    <string name="sign_out">Sign Out</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="re_password">re-password</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes!!</string>
    <string name="no">No!!</string>
    <string name="result">Result</string>
    <string name="player_win">Player win</string>
    <string name="play_again">Play Again</string>
    <string name="back_to_menu_game">Back to Menu Game</string>
    <string name="success">Success</string>
    <string name="setting">Setting</string>
    <string name="back">Back</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="winner">%1$s\nWIN!</string>
    <string name="draw">Draw</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="shop">Shop</string>
    <string name="player_menang">player menang</string>
    <string name="minggu_3_sore">Minggu, 3 sore</string>
    <string name="lawan_komputer">Lawan komputer</string>
    <string name="coin">coin</string>
    <string name="content">content</string>
    <string name="_55440">55440$</string>
    <string name="_100">100</string>
    <string name="_250">250</string>
    <string name="_1000">1000</string>
    <string name="buy">Buy</string>
    <string name="_5000">5000</string>
    <string name="_1500">1500</string>
    <string name="_500">500</string>
    <string name="_150">150</string>
    <string name="_3000">3000</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="music">Music</string>
    <string name="notification">Notification</string>
    <string name="you_can_also_against_the_computer_nquickly_press_the_next_button_to_nbe_able_to_play">You can also against the computer, \nquickly press the next button to \nbe able to play</string>
    <string name="play_with_your_nfriends_with_fun_with_this_game">play with your \nfriends with fun with this game</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="change">Change</string>
    <string name="you_level_up">You Level Up</string>
    <string name="okay">Okay</string>
    <string name="coin">coin</string>
</resources>