<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.binar.sciroper.ui.fragments.vs_com.VsComVm" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:background="@drawable/shape_bg_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_headC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/madeeta"
            android:text="@string/result"
            android:textColor="?textColour"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lootieResultC"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_headC"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />


        <TextView
            android:id="@+id/tv_resultC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/madeeta"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/lootieResultC"
            app:layout_constraintStart_toStartOf="@+id/lootieResultC"
            app:layout_constraintTop_toBottomOf="@+id/lootieResultC"
            tools:text="@string/player_win" />

        <Button
            android:id="@+id/btn_main_lagiC"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/purple_dialog"
            android:fontFamily="@font/madeeta"
            android:text="@string/play_again"
            android:textAllCaps="false"
            android:textColor="?textColour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_resultC" />

        <Button
            android:id="@+id/btn_menuC"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/orange_dialog"
            android:fontFamily="@font/madeeta"
            android:text="@string/back_to_menu_game"
            android:textAllCaps="false"
            android:textColor="?textColour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_main_lagiC" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>